feat(语法分析器): 添加语法分析功能 - 实现了基本的语法分析功能，支持四则运算和括号
- 新增 Parser 类和 TokenTreeView 类用于语法分析
- 在 CompilerController 中集成语法分析功能
- 优化了词法分析逻辑，支持保存结果到文件- 新增错误处理机制，改进了错误提示信息

BREAKING CHANGE: 增加了语法分析